2008-12-29  Frank Warmerdam  <warmerdam@pobox.com>

	* geotiff_proj4.c: Reduce change of szUnits overflow (#3).

2008-11-27  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Introduce support for StdParallel1 in 
	Equirectangular (http://trac.osgeo.org/gdal/ticket/2706)

2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/applygeo.c: New utility for applying georeferencing to an 
	existing file (written by jeskynar@hotmail.com and myself).

2008-10-24  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/listgeo.c: Improve tfw error reporting and user hints (#2)

2008-07-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 1.2.5 release.

	* csv/*.csv: upgraded to EPSG 6.17.

2008-07-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Fix potential buffer overflow in GTIFAngleStringToDD
	http://trac.osgeo.org/gdal/ticket/2228
	
2008-05-21  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/geotifcp.c: Support for -4 option to set from proj.4 def.

	* geotiff_proj4.c: Preliminary proj4->geotiff function, quite incomplete

2008-05-09  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_simpletags.{c,h}, geo_new.c, geotiff.h: Introduce "simple tags"
	API for parsing geotiff tags that don't come via libtiff.  Mostly for
	use of liblas. 

2008-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Ignore GCS values less than 1 as seen in the ENVI
	generated file reported in:
	  http://trac.osgeo.org/gdal/ticket/2183

2007-12-11  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Add EPSG 9822 (Albers Equal Area) support from EPSG

2007-10-02  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c: avoid memory leak in case of error.

2007-07-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Issue libgeotiff 1.2.4 release.

	* geo_normalize.c: Fix name for GCS_WGS_72 per gdal bug #1715.

2007-07-20  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/*.csv,*.c: Upgrade to EPSG 6.13.  Avoid applying pcs.override.csv